add middleware for user authorization

--- a/js5-end-to-end/challenges/js5-5-chatroom/challenge-example.html
+++ b/js5-end-to-end/challenges/js5-5-chatroom/challenge-example.html
@@ -193,9 +193,11 @@
             },
         })
             .then((r) => {
+                console.log('Got a response...')
                 return r.json();
             })
             .then((body) => {
+                console.log({body})
                 if (body.username) {
                     globalUsername = body.username;
                     return render();
